Fixing the landing page overflow

--- a/public/css/landing.less
+++ b/public/css/landing.less
@@ -8,6 +8,8 @@ body{
 	/*min-width: 0;*/
 }
 
+
+
 .clear{
 	clear: both;
 }
@@ -31,6 +33,8 @@ body{
 
 #landing-page{
 	background-color: @bg_blue;
+	overflow-x: hidden !important;
+	
 }
 
 #landing-pad{
